--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 _APP_ENV=production
-_APP_LOCALE=en
+_APP_LOCALE=fr
 _APP_OPTIONS_ABUSE=enabled
 _APP_OPTIONS_FORCE_HTTPS=disabled
 _APP_OPENSSL_KEY_V1=learning-key
@@ -87,3 +87,15 @@ _APP_MAINTENANCE_INTERVAL=86400
 _APP_MAINTENANCE_RETENTION_CACHE=2592000
 _APP_MAINTENANCE_RETENTION_EXECUTION=1209600
 _APP_MAINTENANCE_RETENTION_AUDIT=1209600
+
+
+AUTH_PROVIDERS="google"
+
+AUTH_GOOGLE_DRIVER="openid"
+AUTH_GOOGLE_CLIENT_ID="143148650371-9tkj0mtkcdk47svt8vcos7qamstl1u3v.apps.googleusercontent.com" # Replace XXXX with the App ID (Client ID)
+AUTH_GOOGLE_CLIENT_SECRET="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" # Replace XXXX with the App Secret (Client Secret)
+AUTH_GOOGLE_ISSUER_URL="https://accounts.google.com"
+AUTH_GOOGLE_IDENTIFIER_KEY="email"
+AUTH_GOOGLE_ICON="google"
+AUTH_GOOGLE_ALLOW_PUBLIC_REGISTRATION="true" # This allows users to be automatically created on logins. Use "false" if you want to create users manually
+AUTH_GOOGLE_DEFAULT_ROLE_ID="Member" # Replace XXXX with the role ID you would want for new users. If this is not properly configured, new users will not have access to Directus
